--- a/src/assets/styles/homeLayout/header.scss
+++ b/src/assets/styles/homeLayout/header.scss
@@ -43,6 +43,7 @@ header.header {
                     border: none;
                     li {
                         cursor: pointer;
+                        line-height: 1;
                     }
                 }
             }
